--- a/Asteroids3.vcxproj
+++ b/Asteroids3.vcxproj
@@ -134,7 +134,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Asteroid.cpp" />
-    <ClCompile Include="Asteroids3.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="BigBullet.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Game.cpp" />
