--- a/Asteroids3.vcxproj
+++ b/Asteroids3.vcxproj
@@ -134,12 +134,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Asteroid.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="largeAsteroid.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="BigBullet.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Physics.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="smallAsteroid.cpp" />
     <ClCompile Include="tAsteroid.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -149,8 +152,10 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Global.h" />
+    <ClInclude Include="largeAsteroid.h" />
     <ClInclude Include="Physics.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="smallAsteroid.h" />
     <ClInclude Include="tAsteroid.h" />
   </ItemGroup>
   <ItemGroup>
